Added Penthouse for critical path loading, Gulp replace HTML to add inline css, new favicon and touch icon

--- a/app/index.html
+++ b/app/index.html
@@ -10,11 +10,18 @@
 
     <link href="//www.google-analytics.com" rel="dns-prefetch">
     <link href="//ajax.googleapis.com" rel="dns-prefetch">
-    <link href="assets/css/style.min.css" rel="stylesheet">
+        <!-- build:critical -->
+        <!-- endbuild -->
 
     <script src="assets/components/modernizr/modernizr.js"></script>
   </head>
   <body>
+
+    <script>
+    function loadCSS(e,t,n){"use strict";var i=window.document.createElement("link");var o=t||window.document.getElementsByTagName("script")[0];i.rel="stylesheet";i.href=e;i.media="only x";o.parentNode.insertBefore(i,o);setTimeout(function(){i.media=n||"all"})}
+    loadCSS('assets/css/style.min.css');
+    </script>
+
     <script src="assets/components/jquery/jquery.min.js"></script>
     <script src="assets/js/scripts.min.js"></script>
 
