--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,7 @@
     </script>
 
     <script src="assets/components/jquery/jquery.min.js"></script>
+    <script src="assets/js/plugins.js"></script>
     <script src="assets/js/scripts.min.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
